Container.getSource()